--- a/stocks/index.html
+++ b/stocks/index.html
@@ -49,10 +49,7 @@
   <div class="container">
     <h1>📈 Stock & Crypto Viewer</h1>
 
-<div id="insights" class="card">
-  <h2 style="margin:0 0 .5rem;">AI Insights</h2>
-  <div id="insights-body" class="hint">An AI summary for the current chart will appear here.</div>
-</div>
+
 
     <!-- Tabs -->
     <div class="tabs">
@@ -105,6 +102,11 @@
       <div id="tv_chart_container" class="tv-container"></div>
     </div>
   </div>
+  <!-- AI Insights -->
+  <div id="insights" class="card">
+  <h2 style="margin:0 0 .5rem;">AI Insights</h2>
+  <div id="insights-body" class="hint">An AI summary for the current chart will appear here.</div>
+</div>
 
   <!-- TradingView -->
   <script src="https://s3.tradingview.com/tv.js"></script>
