--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,44 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DoorDash Deal Finder</title>
   <link rel="stylesheet" href="popup.css" />
 </head>
 <body>
-  <header>
-    <h1>DoorDash Deal Finder</h1>
-    <p class="subtitle">Find the best deals and fastest delivery times.</p>
-  </header>
-  <div class="controls">
-    <button id="scan-btn">Scan DoorDash Page</button>
-    <label class="toggle">
-      <input type="checkbox" id="sort-toggle" />
-      <span class="slider"></span>
-      <span class="toggle-label">Sort by Price</span>
-    </label>
-    <span id="pill-count" class="pill">0 found</span>
-  </div>
-  <div id="toast" class="toast" hidden></div>
-  <main id="results">
-    <!-- Results will be injected here -->
-  </main>
-  <template id="card-template">
-    <div class="card" tabindex="0">
-      <div class="card-top">
-        <img class="thumb" src="" alt="Restaurant image" />
-        <span class="name"></span>
-        <span class="badge" hidden>Lowest Price</span>
+  <div class="card">
+    <header class="header">
+      <div class="title-row">
+        <span class="search-emoji" aria-hidden="true">🔎</span>
+        <h1>DoorDash Deal Finder</h1>
       </div>
-      <div class="chips"></div>
+      <p class="sub">Find the best deals and fastest delivery times</p>
+      <button id="scanBtn" class="primary">
+        <span class="btn-emoji" aria-hidden="true">🔍</span>
+        <span>Scan DoorDash Page</span>
+      </button>
+    </header>
+
+    <div class="controls">
+      <label class="switch">
+        <input id="sortPrice" type="checkbox" />
+        <span class="slider"></span>
+      </label>
+      <span class="switch-label">Sort by Price</span>
+      <span class="count-pill" id="countPill">0 found</span>
     </div>
-  </template>
-  <template id="empty-template">
-    <div class="empty">
-      <p>No deals found.<br />Make sure you're on a DoorDash listing or search results page.</p>
-    </div>
-  </template>
+
+    <div id="alert" class="alert hidden"></div>
+    <div id="results" class="list"></div>
+  </div>
+
   <script src="popup.js"></script>
 </body>
 </html>
