--- a/extension/popup.html
+++ b/extension/popup.html
@@ -20,12 +20,7 @@
       </button>
     </header>
 
-    <div class="controls">
-      <label class="switch">
-        <input id="sortPrice" type="checkbox" />
-        <span class="slider"></span>
-      </label>
-      <span class="switch-label">Sort by Price</span>
+    <div class="toolbar">
       <span class="count-pill" id="countPill">0 found</span>
     </div>
 
